feat(.env.example): add .env.example file with default configuration values for development environment feat(core-backend): add combined.log file to log server lifecycle events and HTTP requests
feat(core-backend): add error.log file to track unhandled errors for better debugging
feat(core-backend): implement SwaggerController to generate Swagger UI HTML
feat(core-backend): update routes to include SwaggerController for serving Swagger UI
feat(core-backend): update Swagger JSON file with new /docs endpoint for Swagger UI

fix(index.ts): change default port value from 3000 to 3001 for consistency
fix(tsconfig.json): add "resolveJsonModule": true to tsconfig for resolving JSON modules
refactor(config.ts): remove unnecessary URL validation for sentryDsn configuration option
